--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "watch": "watchify ./public/js/walkthrough.js -o ./public/dist/js/walkthrough.js"
+    "watch": "watchify ./public/js/libs/surge-client.js --s Surge -o ./public/dist/js/surge-client.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
@@ -17,8 +17,15 @@
     "express-session": "*",
     "mongoose": "*",
     "morgan": "~1.5.3",
-    "nodemon": "^1.3.7",
     "serve-favicon": "~2.2.1",
     "socket.io-client": "^1.3.5"
+  },
+  "devDependencies": {
+    "browserify": "latest",
+    "nodemon": "^1.3.7",
+    "watchify": "latest"
+  },
+  "browser": {
+    "surge": "./public/js/libs/surge-client.js"
   }
 }
