--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "async": "*",
-    "socket.io": "^1.3.5"
+    "sockjs": "^0.3.15"
   },
   "devDependencies": {
     "nodemon": "^1.3.7"
