--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongoose": "*",
     "morgan": "~1.5.3",
     "serve-favicon": "~2.2.1",
-    "socket.io-client": "^1.3.5"
+    "sockjs-client": "^1.0.0"
   },
   "devDependencies": {
     "browserify": "latest",
