--- a/package.json
+++ b/package.json
@@ -7,9 +7,46 @@
   },
   "dependencies": {
     "async": "*",
+    "body-parser": "^1.14.2",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "morgan": "^1.6.1",
     "sockjs": "^0.3.15"
   },
   "devDependencies": {
-    "nodemon": "^1.3.7"
+    "babel": "^6.5.2",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "chart.js": "^1.0.2",
+    "del": "^2.2.0",
+    "glob": "^7.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.2",
+    "gulp-util": "^3.0.7",
+    "jquery": "^2.2.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0",
+    "node-sass": "^3.4.2",
+    "nodemon": "^1.3.7",
+    "parallelshell": "^2.0.0",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
+    "uglify-loader": "^1.3.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-paths": "^2.1.0",
+    "vinyl-source-stream": "^1.1.0",
+    "webpack": "^1.12.13",
+    "webpack-stream": "^3.1.0"
   }
 }
