--- a/package.json
+++ b/package.json
@@ -3,7 +3,19 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "scss": "node-sass --output-style compressed -o public/css src/scss",
+    "autoprefixer": "postcss -u autoprefixer -r public/css/*",
+    "lint": "eslint src/js",
+    "babelify": "browserify src/js/main.js -o public/js/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "uglify": "uglifyjs public/js/bundle.js -m -c -o public/js/app.js",
+    "imagemin": "imagemin src/img public/img -p",
+    "build:js": "npm run lint && npm run babelify && npm run uglify",
+    "build:css": "npm run scss && npm run autoprefixer",
+    "build:all": "npm run build:css && npm run build:js && npm run imagemin",
+    "watch:css": "node-sass --output-style compressed -o public/css src/scss -w",
+    "watch:js": "watchify -v babelify src/js/main.js -o public/js/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "watch:all": "parallelshell \"npm run watch:js\" \"npm run watch:css\" \"npm run start\"" 
   },
   "dependencies": {
     "async": "*",
@@ -14,39 +26,19 @@
     "sockjs": "^0.3.15"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.3",
+    "autoprefixer": "^6.3.3",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
     "chart.js": "^1.0.2",
-    "del": "^2.2.0",
-    "glob": "^7.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^1.3.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.2",
-    "gulp-util": "^3.0.7",
+    "eslint": "^2.2.0",
+    "imagemin-cli": "^2.1.0",
     "jquery": "^2.2.0",
-    "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0",
     "node-sass": "^3.4.2",
     "nodemon": "^1.3.7",
+    "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "uglify-loader": "^1.3.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-paths": "^2.1.0",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.12.13",
-    "webpack-stream": "^3.1.0"
+    "postcss-cli": "^2.5.1",
+    "uglify-js": "^2.6.2",
+    "watchify": "^3.7.0"
   }
 }
